# Bachelor-diploma-in-University

./: CMakeLists.txt  Diplom.pro  Input_value_viol.inf  MainWindow.cpp  MainWindow.hpp  Makefile  README.md  main.cpp  mainwindow.ui  mainwindow.ui.autosave
Headers/Controllers/: ChartController.hpp
Headers/Model/: Gauss.hpp  Matrix.hpp  PhisicalModel.hpp  PhysicalModel.hpp  Setup.hpp
Headers/Tests/: testslib.hpp
Headers/Utils/: Defines.hpp  Log.hpp  Utils.hpp
Headers/View/: MainWindow.cpp  MainWindow.hpp
Headers/Views/: Builder.hpp  CharBuilderDirector.hpp  ChartBuilder.hpp  MainWindow.hpp  NumbersDelegate.hpp
Headers/ph/: ph.hpp
Scripts/: build.sh  env.sh  run.sh
Sources/Controllers/: ChartController.cpp
Sources/Model/: Gauss.cpp  Matrix.cpp  PhisicalModel.cpp  PhysicalModel.cpp
Sources/Tests/: testMain.cpp
Sources/Utils/: Log.cpp  Utils.cpp
Sources/Views/: ChartBuilder.cpp  ChartBuilder.cpp.autosave  ChartBuilderDirector.cpp  MainWindow.cpp  MainWindow.cpp.autosave  NumbersDelegate.cpp  mainwindow.ui
Sources/ph/: ph.cpp
include/boost_1_65_1/more/getting_started/: unix-variants.html  windows.html
include/boost_1_65_1/more/getting_started/detail/: release-variables.rst
